--- a/users/templates/admin/assign_role.html
+++ b/users/templates/admin/assign_role.html
@@ -13,7 +13,7 @@
 </div>
 
 {% if messages %}
-          <div class="fixed top-16 right-4 z-50 space-y-2">
+          <div class="fixed top-16 right-4 message-container space-y-2">
             {% for message in messages %}
               <div class="px-4 py-3 rounded shadow text-white text-bold
                 {% if message.tags == 'error' %} bg-red-600
@@ -27,7 +27,7 @@
 
           <script>
             setTimeout(() => {
-              document.querySelectorAll('.z-50').forEach(el => el.remove());
+              document.querySelectorAll('.message-container').forEach(el => el.remove());
             }, 4000);
           </script>
 {% endif %}
